<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.first.troll.Main"
    android:clickable="true"
    android:contextClickable="true">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:id="@+id/textView"
        android:textAlignment="center"
        android:textSize="22dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/searchButton"
        android:id="@+id/searchButton"
        android:textSize="20dp"
        android:layout_below="@+id/toPlace"
        android:clickable="true"
        android:visibility="visible" />



    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fromDoor"
        android:layout_below="@+id/textView"
        android:hint="@string/fromText"
        android:layout_alignParentRight="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/toPlace"
        android:layout_below="@+id/fromDoor"
        android:hint="@string/toText"
        android:layout_alignParentRight="true" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/trollButton"
        android:id="@+id/trollButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"
        android:textSize="20dp"
        android:clickable="true"
        android:onClick="goTroll"/>

</RelativeLayout>
